--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "plaid",
+  "name": "plaid-legacy",
   "version": "1.0.11",
   "description": "A node.js client for the Plaid API",
   "keywords": [
